--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "zeppelin-solidity": "^1.4.0"
   },
   "devDependencies": {
+    "bignumber.js": "^5.0.0",
+    "bluebird": "^3.5.1",
+    "ethjs-account": "^0.1.4",
+    "lodash": "^4.17.4",
+    "randomstring": "^1.1.5",
     "solium": "^1.0.5",
-    "truffle": "^4.0.4"
+    "truffle": "^4.0.4",
+    "web3": "^1.0.0-beta.27"
   }
 }
