--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "devDependencies": {
     "bignumber.js": "^5.0.0",
     "bluebird": "^3.5.1",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^2.0.2",
     "ethjs-account": "^0.1.4",
     "lodash": "^4.17.4",
     "randomstring": "^1.1.5",
