--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test:contracts": "truffle test",
+    "test:contracts:coverage": "./node_modules/.bin/solidity-coverage",
     "lint:contracts": "./node_modules/solium/bin/solium.js -d contracts/",
     "compile": "node ./utils/compile.js"
   },
@@ -31,6 +32,7 @@
     "randomstring": "^1.1.5",
     "rimraf": "^2.6.2",
     "solc": "^0.4.19",
+    "solidity-coverage": "^0.4.9",
     "solium": "^1.0.5",
     "truffle": "^4.0.4",
     "web3": "^1.0.0-beta.27"
