--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   },
   "homepage": "https://github.com/cryptol0g1c/bitsign-federation#readme",
   "dependencies": {
-    "zeppelin-solidity": "^1.4.0"
+    "moment": "^2.20.1",
+    "zeppelin-solidity": "^1.7.0"
   },
   "devDependencies": {
-    "bignumber.js": "^5.0.0",
-    "bluebird": "^3.5.1",
-    "chai": "^4.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.23.0",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
+    "chai": "^4.1.2",
     "ethjs-account": "^0.1.4",
     "lodash": "^4.17.4",
     "randomstring": "^1.1.5",
