--- a/package.json
+++ b/package.json
@@ -19,26 +19,22 @@
   },
   "homepage": "https://github.com/cryptol0g1c/bitsign-federation#readme",
   "dependencies": {
-    "moment": "^2.20.1",
     "zeppelin-solidity": "^1.7.0"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
     "babel-register": "^6.23.0",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
     "chai": "^4.1.2",
-    "ethjs-account": "^0.1.4",
     "lodash": "^4.17.4",
-    "randomstring": "^1.1.5",
     "rimraf": "^2.6.2",
     "solc": "^0.4.19",
     "solidity-coverage": "^0.4.9",
     "solium": "^1.0.5",
-    "truffle": "^4.0.4",
-    "web3": "^1.0.0-beta.27"
+    "truffle": "^4.0.4"
   }
 }
