--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,22 @@
 [parity]
 chain = "genesis.json"
 
+[ui]
+force = false
+disable = true #Nodes does not normally need Wallet UI
+
 [rpc]
 apis = ["web3", "eth", "net", "personal", "parity", "parity_set", "traces", "rpc", "parity_accounts"]
 
 [mining]
-reseal_on_txs = "none"
 reseal_max_period = 60000
 
 [misc]
-log_file = "parity.log"
+logging = "own_tx=trace"
+log_file = "bitsign-node.log"
+color = true
 
 [network]
+port = 30303
 reserved_peers = "nodes.txt"
+discovery = true
