--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
-    bitsign-node:
-        image: cryptologic/bitsign-node:${TAG}
-        restart: unless-stopped
-        environment:
-            - NODE_NAME=${NODE_NAME}
-        volumes:
-            - bitsign-federation-data:/data
-
+  bitsign-node:
+    image: cryptologic/bitsign-node:${TAG}
+    restart: unless-stopped
+    environment:
+      - NODE_NAME=${NODE_NAME}
+      - NODE_TYPE=${NODE_TYPE}
+    volumes:
+      - bitsign-federation-data:/data
 volumes:
     bitsign-federation-data:
