--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
     - export IMAGE_TAG="$CI_BUILD_REF_NAME"
     - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" $CI_REGISTRY
   script:
-    - docker pull "$CI_REGISTRY_IMAGE:$IMAGE_TAG" || docker build --pull -f Dockerfile -t "$CI_REGISTRY_IMAGE:$IMAGE_TAG" .
+    - docker pull "$CI_REGISTRY_IMAGE:$IMAGE_TAG" || docker build --pull -f docker/parity-node/Dockerfile -t "$CI_REGISTRY_IMAGE:$IMAGE_TAG" .
     - docker tag  "$CI_REGISTRY_IMAGE:$IMAGE_TAG" "$CI_REGISTRY_IMAGE:$CI_BUILD_REF_NAME"
     - docker push "$CI_REGISTRY_IMAGE:$IMAGE_TAG"
   only:
