Refactor dockerfiles to work with parity version 2

--- a/docker/parity-node/Dockerfile
+++ b/docker/parity-node/Dockerfile
@@ -2,6 +2,8 @@ FROM parity/parity:v2.1.8
 
 WORKDIR /bitsign
 
+USER root
+
 RUN apt-get update && apt-get install -yq --no-install-recommends \
         gettext \
         nano \
