Update README and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   bitsign-node:
-    image: cryptologic/bitsign-node:${TAG}
+    build: .
     restart: unless-stopped
     environment:
       - NODE_NAME=${NODE_NAME}
